--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,17 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div class="grey-container">
+  <app-header></app-header>
+</div>
+<section class="container">
+  <div class="left-half">
+    <app-user-form></app-user-form>
+  </div>
+  <div class="right-half">
+    Hey
+  </div>
+</section>
+
+<!-- <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -16,6 +28,6 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
-</ul>
+</ul> -->
 
 <router-outlet></router-outlet>
