--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -1,58 +1,72 @@
-<!-- <form> -->
-  <!-- <div>First name:</div>
-  <input type="text" name="firstname" placeholder="First Name">
-  <br>
-  Last name:<br>
-  <input type="text" name="lastname" placeholder="Last Name">
-  <br><br> -->
-  <!-- <div class="form-group">
-    <label for="firstName">First Name</label>
-    <input id="firstName" type="text" class="form-control">
-  </div> -->
-  
-<!-- </form> -->
-<!-- <div *ngIf="!name; else forminfo">
-  <form [formGroup]="rForm" (ngSubmit)="addPost*(rForm.value)">
-    <div class="form-container">
-      <div class="row columns">
-        <label>First Name<br>
-          <input type="text" formControlName="name">
-        </label>
-      </div>
-    </div>
-  </form>
-</div>
-
-<ng-template #forminfo>
-  <div class="form-container">
-    <div class="row columns">
-      <h1>{{name}}</h1>
-      <p>{{description}}</p>
-    </div>
-  </div>
-</ng-template> -->
-
 <form [formGroup]="rForm">
+  <div>First Name</div>
+  <input type="text" placeholder="First Name" formControlName="firstname">
+  <span *ngIf="firstName.invalid && firstName.touched">
+      <br>
+      Input exceeds 30 characters!
+  </span>
+  <br><br>
+  
+  <div>Last Name</div>
+  <input type="text" placeholder="Last Name" formControlName="lastname">
+  <span *ngIf="lastName.invalid && lastName.touched">
+      <br>
+      Input exceeds 30 characters!
+  </span>
+  <br><br>
+
+  <div>Credit Score</div>
+  <input type="text" placeholder="Credit Score" formControlName="creditscore">
+  <span *ngIf="creditScore.invalid && creditScore.touched">
+      <br>
+      Credit Score needs to be between 1 and 850!
+  </span>
+  <br><br>
+
+  <div>Annual Income</div>
+  <input type="text" placeholder="Annual Income" formControlName="annualincome">
+  <span *ngIf="annualIncome.invalid && annualIncome.touched">
+      <br>
+      Annual income needs to be atleast 10!
+  </span>
+  <br><br>
+</form>
+
+<!-- <form [formGroup]="rForm">
 
   <mat-form-field>
     <input matInput placeholder="First Name" formControlName="firstname">
+    <mat-error *ngIf="firstName.invalid && firstName.touched">
+      Input exceeds 30 characters!
+    </mat-error>
   </mat-form-field>
   <br>
 
   <mat-form-field>
     <input matInput placeholder="Last Name" formControlName="lastname">
+    <mat-error *ngIf="lastName.invalid && lastName.touched">
+      Input exceeds 30 characters!
+    </mat-error>
   </mat-form-field>
   <br>
 
   <mat-form-field>
     <input matInput placeholder="Credit Score" formControlName="creditscore">
+    <mat-error *ngIf="creditScore.invalid && creditScore.touched">
+      Credit Score needs to be between 1 and 850!
+    </mat-error>
   </mat-form-field>
   <br>
 
   <mat-form-field>
     <input matInput placeholder="Annual Income" formControlName="annualincome">
+    <mat-error *ngIf="annualIncome.invalid && annualIncome.touched">
+      Annual income needs to be atleast 10!
+    </mat-error>
   </mat-form-field>
   <br>
 
-</form>
+</form> -->
+
+
 
