--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,16 @@
 <div class="grey-container">
   <app-header></app-header>
 </div>
-<section class="container">
-  <div class="left-half">
-    <app-user-form></app-user-form>
-  </div>
-  <div class="right-half">
-    Hey
-  </div>
-</section>
+<div class="grey-container" style="background:white;">
+  <section class="container">
+    <div class="left-half">
+      <app-user-form></app-user-form>
+    </div>
+    <div class="right-half">
+        <app-group-cards></app-group-cards>
+    </div>
+  </section>
+</div>
 
 <!-- <div style="text-align:center">
   <h1>
