--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -30,6 +30,7 @@
       Annual income needs to be atleast 10!
   </span>
   <br><br>
+  <input type="submit" value="Submit">
 </form>
 
 <!-- <form [formGroup]="rForm">
