--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -1,11 +1,11 @@
 .card {
     height: 150px;
-    width: 200px;
+    // width: 200px;
     // background-color: gray;
-    border: 1px solid gray;
+    border: 1px solid#ccc;
     
     display: flex;
     flex-direction: column;
-    // justify-content: space-between;
+    justify-content: space-around;
     align-items: center; 
 }
